--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "mesher-test",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
@@ -12,8 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "vitest": "^0.28.5",
-    "zod": "^3.20.6"
+    "vitest": "^0.28.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
@@ -21,7 +20,6 @@
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.28.5",
     "autoprefixer": "^10.4.13",
-    "clsx": "^1.2.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
